evaluation/rq1/sota/mythril/execution_logs/0x0x35################################53504_eth.txt
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x35################################53504_eth/MEGAI.sol:312:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    constructor () {
    ^ (Relevant source part starts here and spans across multiple lines).

